apply plugin: 'java'

dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')
    compile project(path: ':shared')
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr3'
    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr3'
    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr3'
    compile 'junit:junit:4.12'
}

task createJar(type: Copy) {
    from('build/intermediates/bundles/release/')
    into('libs/')
    include('classes.jar')
    rename('classes.jar', 'logmanagementlib.jar')
}

createJar.dependsOn(build)

sourceCompatibility = "1.8"
targetCompatibility = "1.8"
